my meetups -- new confer feature

--- a/server/templates/papers.html
+++ b/server/templates/papers.html
@@ -5,6 +5,7 @@
 <a class="button navitem" href="/">Home</a>
 <a class="button active navitem" href="/{{conf}}/papers">My Papers</a>
 <a class="button navitem" href="/{{conf}}/schedule">My Schedule</a>
+<a class="button navitem" href="/{{conf}}/meetups">My Meetups</a>
 <a class="button navitem" href="/logout">Log Out</a>
 {% endblock %}
 
