--- a/server/templates/paper.html
+++ b/server/templates/paper.html
@@ -2,8 +2,10 @@
 {% block links %}
 <span id="logged_in_name"></span> &nbsp;
 <a class="button mobile-nav" href="#">Menu</a>
+<a class="button navitem" href="/">Home</a>
 <a class="button navitem" href="/{{conf}}/papers">My Papers</a>
 <a class="button navitem" href="/{{conf}}/schedule">My Schedule</a>
+<a class="button navitem" href="/{{conf}}/meetups">My Meetups</a>
 <a class="button navitem" href="/logout">Log Out</a>
 {% endblock %}
 {% block content %}   
