my meetups -- remove email

--- a/server/templates/meetups.html
+++ b/server/templates/meetups.html
@@ -26,7 +26,7 @@
         </td>
         <td class="content">
           <ul>
-            <li><h3>{{p.name}} -- <a class="paper-subtype" href="mailto:{{p.email}}">{{p.email}}</a></h3></li>
+            <li><h3><a href="mailto:{{p.email}}">{{p.name}}</a></h3></li>
             <li><span class="paper-subtype">
               You and {{p.name}} have {{p.common_likes}} papers in common.</li>
               </span>
