--- a/server/templates/meetups.html
+++ b/server/templates/meetups.html
@@ -8,7 +8,11 @@
 <a class="button active navitem" href="/{{conf}}/meetups">My Meetups</a>
 <a class="button navitem" href="/logout">Log Out</a>
 {% endblock %}
-{% block content %}   
+{% block content %}  
+<div class="blurb">
+The Meetup feature allows you to discover people with similar interests as yours. If you do not want to appear in other people's meetups, you can turn off this feature. <br /> <br />
+<a class="button" href="/settings">Click Here</a> to manage your Meetup settings.
+</div> 
 <div class="goto-link">
 <a class="button" href="/{{conf}}/papers">Go to My Papers</a>
 <a class="button" href="/{{conf}}/schedule">Go to My Schedule</a>
