--- a/server/templates/meetups.html
+++ b/server/templates/meetups.html
@@ -11,7 +11,7 @@
 {% block content %}  
 <div class="blurb">
 The Meetup feature allows you to discover people with similar interests as yours. If you do not want to appear in other people's meetups, you can turn off this feature. <br /> <br />
-<a class="button" href="/settings">Click Here</a> to manage your Meetup settings.
+<a class="blue bold" href="/settings">Click Here</a> to manage your Meetups settings.
 </div> 
 <div class="goto-link">
 <a class="button" href="/{{conf}}/papers">Go to My Papers</a>
