--- a/server/templates/meetups.html
+++ b/server/templates/meetups.html
@@ -29,7 +29,7 @@ The Meetups feature allows you to discover people with similar interests as your
         <td class="content">
           <ul>
             <li><h3><a href="mailto:{{p.email}}">{{p.name}}</a></h3></li>
-            <li><span class="paper-subtype">
+            <li><span class="paper-subtype" style="text-align: left !important;">
               You and {{p.name}} have {{p.common_likes}} papers in common.</li>
               </span>
           </ul>
