--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -28,23 +28,28 @@
 <div id="home">
     <h3 class="collapsible-title collapsible">Recently Added Conferences</h3>
 	<div id="conf_container">
-		<table id="conferences" class="conference-container">
+		<table id="conferences" class="paper-container">
             {% for conf in conferences %}
             <tr class="clickable">
-                <td class="metadata">
-                    <a href="/{{conf.unique_name}}/papers">
+               
+                <td class="content" style="padding:0.5em 1.5em 0.5em 1.5em !important;">
+                <a href="/{{conf.unique_name}}/papers" style="display:inline-block !important; float:right;">
                     <span class="cover-icon link" style="background-image:url(/static/conf/{{conf.unique_name}}/logo/cover.png);"></span>
-                    </a>
-                </td>
-                <td class="content">
+                </a>
+               
                 <ul>
                     <li><h3><span class="link"><a href="/{{conf.unique_name}}/papers">{{conf.title}}</a></span></h3></li>
                     <li> <span class="info-box">{{conf.start_date}} - {{conf.end_date}}</span> <span class="info-box">{{conf.location}}</span></li>
-                    <li class="abstract">{{conf.blurb}}</li>
+                </ul>
+
+                <ul>
+                <li class="abstract">{{conf.blurb}}</li>
                 </ul>
                 <br/>
                 <a href="/{{conf.unique_name}}/papers" class="conf-button">Browse</a>
-                </td>
+                <br />
+                <br />
+            </td>
             </tr>
             {% endfor %}
 		</table>
