add credits page

--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -68,7 +68,7 @@ Confer Template Layout
 {% endblock %}
 {% block credits %}
 <div class="credit">
-  Problems or comments? <a href="mailto:confer@csail.mit.edu">confer@csail.mit.edu</a><br/>
+  Brought to you by: <a href="/team">Confer Team</a>. Problems or comments? <a href="mailto:confer@csail.mit.edu">confer@csail.mit.edu</a><br/>
 </div>
 {% endblock %}
 
