--- a/server/templates/meetups.html
+++ b/server/templates/meetups.html
@@ -20,7 +20,7 @@ The Meetups feature allows you to discover people with similar interests as your
 {% if meetups_enabled %}
 <!-- Similar People -->
 <div id="simiar_people_page">
-  <h3 class="collapsible-title collapsible" id="similar_people_toggle" data="similar_people_container" value=""><span class="arrow arrow-down"></span> People who have similar interests as you:</h3>
+  <h3 class="collapsible-title collapsible" id="similar_people_toggle" data="similar_people_container" value=""><span class="arrow arrow-down"></span> People who have similar interests as you</h3>
 
   <div id="similar_people_container">
     <table id="similar_people" class="paper-container"> 
