make collaborators name more explicit

--- a/server/templates/team.html
+++ b/server/templates/team.html
@@ -5,11 +5,11 @@
 {% block content %}
 <div class="blurb">
 <br />
-Please send your feedback/suggestions to <a class="blue bold" href="mailto://confer@csail.mit.edu">confer@csail.mit.edu</a>. <br /> <br />
+Confer originated from myCHI - our first app developed for CHI 2013. A lot of current confer features come from myCHI. Below are the list of people who worked for confer and myCHI.<br /> <br />
 </div>
 <!-- Confer Team -->
 <div id="confer_team_container">
-  <h3 class="collapsible-title"> Current Team</h3>
+  <h3 class="collapsible-title"> Confer Team</h3>
   <table id="confer_team" class="paper-container"> 
     {% for p in current_team %}
     <tr class="clickable">
@@ -26,7 +26,7 @@ Please send your feedback/suggestions to <a class="blue bold" href="mailto://con
   </table>
   <br />
   <br />
-  <h3 class="collapsible-title"> Past Collaborators</h3>
+  <h3 class="collapsible-title"> myCHI Team</h3>
   <table id="confer_team" class="paper-container"> 
     {% for p in past_collaborators %}
     <tr class="clickable">
