make collaborators name more explicit

--- a/server/templates/team.html
+++ b/server/templates/team.html
@@ -1,6 +1,6 @@
 {% extends "login-layout.html" %}
 {% block links %}
-<a class="button" href="/login?redirect_url=/">Login</a>
+<a class="button" href="/">Home</a>
 {% endblock %}
 {% block content %}
 <div class="blurb">
