make collaborators name more explicit

--- a/server/templates/team.html
+++ b/server/templates/team.html
@@ -4,8 +4,7 @@
 {% endblock %}
 {% block content %}
 <div class="blurb">
-<br />
-Confer originated from myCHI - our first app developed for CHI 2013. A lot of current confer features come from myCHI. Below is the list of people who worked for confer and myCHI.<br /> <br />
+Confer originated from myCHI - our first app developed for CHI 2013. A lot of current confer features come from myCHI. Below is the list of people who worked for confer and myCHI.
 </div>
 <!-- Confer Team -->
 <div id="confer_team_container">
