show the header only if there are some people

--- a/server/templates/meetups.html
+++ b/server/templates/meetups.html
@@ -20,7 +20,11 @@ The Meetups feature allows you to discover people with similar interests as your
 {% if meetups_enabled %}
 <!-- Similar People -->
 <div id="simiar_people_page">
+  {% if similar_people|length %}
   <h3 class="collapsible-title" id="similar_people_toggle"> People who have similar interests as you</h3>
+  {% else %}
+  <h3>We tried hard but we couldn't find anybody having similar interests as you, it may be because you haven't starred enough papers.</h3>  
+  {% endif %}
 
   <div id="similar_people_container">
     <table id="similar_people" class="paper-container"> 
