show the header only if there are some people

--- a/server/templates/meetups.html
+++ b/server/templates/meetups.html
@@ -39,7 +39,9 @@ The Meetups feature allows you to discover people with similar interests as your
     </table>
   </div>
   {% else %}
-  <span class="bold">We tried hard but we couldn't find anybody having similar interests as you, it may be because you haven't starred enough papers.</span>  
+  <div class="blurb">
+  <span class="bold">We tried hard but we couldn't find anybody having similar interests as you, it may be because you haven't starred enough papers.</span>
+  </div>
   {% endif %}
 
 </div>  <!-- similar people -->
