show the header only if there are some people

--- a/server/templates/meetups.html
+++ b/server/templates/meetups.html
@@ -40,7 +40,7 @@ The Meetups feature allows you to discover people with similar interests as your
   </div>
   {% else %}
   <div class="blurb">
-  <span class="bold">We tried hard but we couldn't find anybody having similar interests as you, it may be because you haven't starred enough papers.</span>
+  <span class="error">We tried hard to find people having similar interests as you but we couldn't find any -- this may be because you haven't starred enough papers.</span>
   </div>
   {% endif %}
 
