show the starred/recs header only when there are some starred papers

--- a/server/templates/papers.html
+++ b/server/templates/papers.html
@@ -17,7 +17,7 @@ Tag papers you want to see and get social recommendations of other papers you ma
 <div class="goto-link">
 <a class="button" href="/{{conf}}/schedule">Go to My Schedule</a>
 </div>	
-<!--- Home Page -->
+<!--- Papers Page -->
 <div id="home">
   <h3 class="collapsible-title collapsible" id="likes_toggle" data="likes_container"><span class="arrow arrow-down"></span>Papers you want to see <span class="count"></span></h3>	
 	<div id="likes_container">
