a minor logo change

--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block headlink-left %}
 <span id="headlink-left">
-    <a id="logo" href="/">Confer</a>
+    <a id="logo" href="/">confer</a>
 </span>
 {% endblock %}
 {% block links %}
