--- a/server/templates/login-layout.html
+++ b/server/templates/login-layout.html
@@ -28,7 +28,7 @@ Confer Login/Register Template Layout
 <div id="header">
 	<div id="wrap">
 		<span id="headlink-left">
-			<a id="logo" href="/">Confer</a>
+			<a id="logo" href="/">confer</a>
 		</span>
 		<span id="headlink-right">
       {% block links %}
