--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -6,7 +6,7 @@
 Confer Template Layout
 -->
 {% block html %}
-<html>
+<html manifest="/static/conf/{{conf}}/cache.manifest">
 {% endblock %}
 <head>
 <title>Confer</title>
