--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block html %}
-<html>
+<html manifest="/static/conf/cache.manifest">
 {% endblock %}
 {% block static %}
 {% endblock %}
