--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -3,6 +3,16 @@
 <html manifest="/static/conf/cache.manifest">
 {% endblock %}
 {% block static %}
+<style>
+#headlink-left{
+  position:absolute;
+  top:0.2em;
+  left:0;
+  color: #F6F6F6;
+  background-size: 11em 3.7em;
+  background-repeat: no-repeat;
+}
+</style>
 {% endblock %}
 {% block headlink-left %}
 <span id="headlink-left">
