don't attempt fetching logo on the home page

--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -9,7 +9,8 @@
 {% endblock %}
 {% block links %}
 {% endblock %}
-
+{% block static %}
+{% endblock %}
 {% block content %} 
 <style>
 #headlink-left{
