--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -1,6 +1,9 @@
 {% extends "layout.html" %}
 {% block html %}
+<!--
 <html manifest="/static/conf/cache.manifest">
+-->
+<html>
 {% endblock %}
 {% block headlink-left %}
 <span id="headlink-left">
