--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -6,7 +6,10 @@
 Confer Template Layout
 -->
 {% block html %}
+<!-->
 <html manifest="/static/conf/{{conf}}/cache.manifest">
+-->
+<html>
 {% endblock %}
 <head>
 <title>Confer</title>
