credits -- some more changes

--- a/server/templates/team.html
+++ b/server/templates/team.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
 <div class="blurb">
-Confer originated from myCHI - our first app developed for CHI 2013. A lot of current confer features come from myCHI. Below is the list of people who worked for confer and myCHI.
+Confer originated from myCHI - our first app developed for CHI 2013. The Confer design and many of its features are borrowed from myCHI. Below is the list of people who contributed to Confer/myCHI. 
 </div>
 <!-- Confer Team -->
 <div id="confer_team_container">
