--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -92,6 +92,9 @@ Confer Template Layout
 {% endblock %}
 
 <script type="text/javascript">
+	for(var i in nav_hide) {
+		$('.'+i).hide();
+	}
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', 'UA-41950128-1']);
     _gaq.push(['_trackPageview']);
