--- a/server/templates/meetups.html
+++ b/server/templates/meetups.html
@@ -3,9 +3,9 @@
 <span id="logged_in_name"></span> &nbsp;
 <a class="button mobile-nav" href="#">Menu</a>
 <a class="button navitem" href="/">Home</a>
-<a class="button navitem" href="/{{conf}}/papers">My Papers</a>
-<a class="button navitem" href="/{{conf}}/schedule">My Schedule</a>
-<a class="button active navitem" href="/{{conf}}/meetups">My Meetups</a>
+<a class="button navitem nav_papers" href="/{{conf}}/papers">My Papers</a>
+<a class="button navitem nac_schedule" href="/{{conf}}/schedule">My Schedule</a>
+<a class="button active navitem nav_meetups" href="/{{conf}}/meetups">My Meetups</a>
 <a class="button navitem" href="/logout">Log Out</a>
 {% endblock %}
 {% block content %}  
