--- a/server/templates/paper.html
+++ b/server/templates/paper.html
@@ -3,15 +3,15 @@
 <span id="logged_in_name"></span> &nbsp;
 <a class="button mobile-nav" href="#">Menu</a>
 <a class="button navitem" href="/">Home</a>
-<a class="button navitem" href="/{{conf}}/papers">My Papers</a>
-<a class="button navitem" href="/{{conf}}/schedule">My Schedule</a>
-<a class="button navitem" href="/{{conf}}/meetups">My Meetups</a>
+<a class="button navitem nav_papers" href="/{{conf}}/papers">My Papers</a>
+<a class="button navitem nav_schedule" href="/{{conf}}/schedule">My Schedule</a>
+<a class="button navitem nav_meetups" href="/{{conf}}/meetups">My Meetups</a>
 <a class="button navitem" href="/logout">Log Out</a>
 {% endblock %}
 {% block content %}   
 <div class="goto-link">
-<a class="button" href="/{{conf}}/papers">Go to My Papers</a>
-<a class="button" href="/{{conf}}/schedule">Go to My Schedule</a>
+<a class="button nav_papers" href="/{{conf}}/papers">Go to My Papers</a>
+<a class="button nav_schedule" href="/{{conf}}/schedule">Go to My Schedule</a>
 </div>	
 
 <!-- Selected Paper -->
