--- a/server/templates/papers.html
+++ b/server/templates/papers.html
@@ -3,15 +3,15 @@
 <span id="logged_in_name"></span> &nbsp;
 <a class="button mobile-nav" href="#">Menu</a>
 <a class="button navitem" href="/">Home</a>
-<a class="button active navitem" href="/{{conf}}/papers">My Papers</a>
-<a class="button navitem" href="/{{conf}}/schedule">My Schedule</a>
-<a class="button navitem" href="/{{conf}}/meetups">My Meetups</a>
+<a class="button active navitem nav_papers" href="/{{conf}}/papers">My Papers</a>
+<a class="button navitem nav_schedule" href="/{{conf}}/schedule">My Schedule</a>
+<a class="button navitem nav_meetups" href="/{{conf}}/meetups">My Meetups</a>
 <a class="button navitem" href="/logout">Log Out</a>
 {% endblock %}
 
 {% block content %} 
 
-<div class="blurb">
+<div class="blurb nav_schedule">
 Tag papers you want to see and get social recommendations of other papers you may like. The recommendations update automatically as you tag new papers. Just click "Show More" to see more! 
 </div>
 <div class="goto-link">
