nav_hide handle undefined

--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -92,7 +92,7 @@ Confer Template Layout
 {% endblock %}
 
 <script type="text/javascript">
-	if (nav_hide != null) {
+	if (typeof(nav_hide) != "undefined") {
 		for(var i in nav_hide) {
 			$('.' + nav_hide[i]).hide();
 		}
