--- a/server/templates/meetups.html
+++ b/server/templates/meetups.html
@@ -4,7 +4,7 @@
 <a class="button mobile-nav" href="#">Menu</a>
 <a class="button navitem" href="/">Home</a>
 <a class="button navitem nav_papers" href="/{{conf}}/papers">My Papers</a>
-<a class="button navitem nac_schedule" href="/{{conf}}/schedule">My Schedule</a>
+<a class="button navitem nav_schedule" href="/{{conf}}/schedule">My Schedule</a>
 <a class="button active navitem nav_meetups" href="/{{conf}}/meetups">My Meetups</a>
 <a class="button navitem" href="/logout">Log Out</a>
 {% endblock %}
