--- a/server/templates/meetups.html
+++ b/server/templates/meetups.html
@@ -1,12 +1,16 @@
 {% extends "layout.html" %}
 {% block links %}
-<span id="logged_in_name"></span> &nbsp;
+<span id="logged_in_name">{{login_name}}</span> &nbsp;
 <a class="button mobile-nav" href="#">Menu</a>
 <a class="button navitem" href="/">Home</a>
 <a class="button navitem nav_papers" href="/{{conf}}/papers">My Papers</a>
 <a class="button navitem nav_schedule" href="/{{conf}}/schedule">My Schedule</a>
 <a class="button active navitem nav_meetups" href="/{{conf}}/meetups">My Meetups</a>
+{% if login_id %}
 <a class="button navitem" href="/logout">Log Out</a>
+{% else %}
+<a class="button navitem" href="/login?redirect_url=/{{conf}}/meetups">Log In</a>
+{% endif %}
 {% endblock %}
 {% block content %}  
 <div class="blurb">
