--- a/server/templates/schedule.html
+++ b/server/templates/schedule.html
@@ -1,12 +1,16 @@
 {% extends "layout.html" %}
 {% block links %}
-<span id="logged_in_name"></span> &nbsp;
+<span id="logged_in_name">{{login_name}}</span> &nbsp;
 <a class="button mobile-nav" href="#">Menu</a>
 <a class="button navitem" href="/">Home</a>
 <a class="button navitem nav_papers" href="/{{conf}}/papers">My Papers</a>
 <a class="button active navitem nac_schedule" href="/{{conf}}/schedule">My Schedule</a>
 <a class="button navitem nav_meetups" href="/{{conf}}/meetups">My Meetups</a>
+{% if login_id %}
 <a class="button navitem" href="/logout">Log Out</a>
+{% else %}
+<a class="button navitem" href="/login?redirect_url=/{{conf}}/schedule">Log In</a>
+{% endif %}
 {% endblock %}
 {% block content %}   
 
@@ -44,7 +48,6 @@ Tag sessions and papers you want to see and get updated recommendations on the f
 <!-- Javascript -->
 <script type="text/javascript">
     $(document).ready(function(){
-        $("#logged_in_name").html(localStorage.getItem('login_name'))
         populate_filters()
         populate_schedule()
         setup_filters()
