--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -13,9 +13,9 @@
 {% block links %}
 <span id="logged_in_name">{{login_name}}</span> &nbsp;
 {% if login_id %}
-<a class="button navitem" href="/logout">Log Out</a>
+<a class="button" href="/logout">Log Out</a>
 {% else %}
-<a class="button navitem" href="/login">Log In</a>
+<a class="button" href="/login">Log In</a>
 {% endif %}
 {% endblock %}
 {% block static %}
