--- a/server/templates/papers.html
+++ b/server/templates/papers.html
@@ -19,7 +19,7 @@
 Tag papers you want to see and get social recommendations of other papers you may like. The recommendations update automatically as you tag new papers. Just click "Show More" to see more! 
 </div>
 <div class="goto-link">
-<a class="button" href="/{{conf}}/schedule">Go to My Schedule</a>
+<a class="button nav_schedule" href="/{{conf}}/schedule">Go to My Schedule</a>
 </div>	
 <!--- Papers Page -->
 <div id="home">
