--- a/server/templates/schedule.html
+++ b/server/templates/schedule.html
@@ -4,7 +4,7 @@
 <a class="button mobile-nav" href="#">Menu</a>
 <a class="button navitem" href="/">Home</a>
 <a class="button navitem nav_papers" href="/{{conf}}/papers">My Papers</a>
-<a class="button active navitem nac_schedule" href="/{{conf}}/schedule">My Schedule</a>
+<a class="button active navitem nav_schedule" href="/{{conf}}/schedule">My Schedule</a>
 <a class="button navitem nav_meetups" href="/{{conf}}/meetups">My Meetups</a>
 {% if login_id %}
 <a class="button navitem" href="/logout">Log Out</a>
@@ -18,7 +18,7 @@
 Tag sessions and papers you want to see and get updated recommendations on the fly. Use your likes, recommendations, and other filtering options to discover your personal schedule.
 </div>
 <div class="goto-link">
-<a class="button" href="/{{conf}}/papers">Go to My Papers</a>
+<a class="button nav_papers" href="/{{conf}}/papers">Go to My Papers</a>
 </div>	
 <!--  Schedule -->
 <div id="schedule">	
