fix mobile version of hiding tabs

--- a/server/templates/papers.html
+++ b/server/templates/papers.html
@@ -15,7 +15,7 @@
 
 {% block content %} 
 
-<div class="blurb nav_schedule">
+<div class="blurb">
 Tag papers you want to see and get social recommendations of other papers you may like. The recommendations update automatically as you tag new papers. Just click "Show More" to see more! 
 </div>
 <div class="goto-link">
