--- a/server/templates/meetups.html
+++ b/server/templates/meetups.html
@@ -39,7 +39,7 @@ The Meetups feature allows you to discover people with similar interests as your
   </div>
   {% else %}
   <div class="blurb">
-  <span class="error">We tried hard to find people having similar interests as you but we couldn't find any -- this may be because you haven't starred enough papers.</span>
+  <span class="error">We tried hard to find people having similar interests as you but we couldn't find any -- this may be because you haven't starred enough papers or there aren't enough other people in the system yet.</span>
   </div>
   {% endif %}
 
