Allow going to Home from settings

--- a/server/templates/settings.html
+++ b/server/templates/settings.html
@@ -1,6 +1,7 @@
 {% extends "login-layout.html" %}
 {% block links %}
 <span id="logged_in_name">{{login_name}}</span> &nbsp;
+<a class="button" href="/">Home</a>
 {% endblock %}
 {% block content %}
 <script type="text/javascript">
