--- a/server/templates/paper.html
+++ b/server/templates/paper.html
@@ -5,10 +5,11 @@
 <a class="button navitem nav_papers" href="/{{conf}}/papers">My Papers</a>
 <a class="button navitem nav_schedule" href="/{{conf}}/schedule">My Schedule</a>
 <a class="button navitem nav_meetups" href="/{{conf}}/meetups">My Meetups</a>
-<a class="button navitem" href="/">Home</a>
+<a class="button navitem" href="/">All Conferences</a>
 {% endblock %}
-{% block content %}   
+{% block content %}
 <div class="goto-link">
+<br /> 
 <a class="button nav_papers" href="/{{conf}}/papers">Go to My Papers</a>
 <a class="button nav_schedule" href="/{{conf}}/schedule">Go to My Schedule</a>
 </div>	
