--- a/server/templates/papers.html
+++ b/server/templates/papers.html
@@ -5,7 +5,7 @@
 <a class="button active navitem nav_papers" href="/{{conf}}/papers">My Papers</a>
 <a class="button navitem nav_schedule" href="/{{conf}}/schedule">My Schedule</a>
 <a class="button navitem nav_meetups" href="/{{conf}}/meetups">My Meetups</a>
-<a class="button navitem" href="/">Home</a>
+<a class="button navitem" href="/">All Conferences</a>
 {% endblock %}
 
 {% block content %} 
