--- a/server/templates/register.html
+++ b/server/templates/register.html
@@ -9,7 +9,7 @@
 	<h3>Create a new account</h3>
 	<hr />
 	<div id="error">
-		{% for error in errors %}<span class="error">{{error}}</span><br /> 
+		{% for error in errors %}<span class="error">{% autoescape off %}{{error}}{% endautoescape %}</span><br /> 
         {% endfor %}
         <br />
     </div>
