--- a/server/templates/settings.html
+++ b/server/templates/settings.html
@@ -12,7 +12,7 @@
 	<h3>Confer Account Settings</h3>
 	<hr />
 	<div id="error">
-		{% for error in errors %}<span class="error">{{error}}</span><br />
+		{% for error in errors %}<span class="error">{% autoescape off %}{{error}}{% endautoescape %}</span><br />
         {% endfor %}
         <br />
     </div>
