Log in in Sign up

--- a/server/templates/register.html
+++ b/server/templates/register.html
@@ -24,5 +24,10 @@
 	<label for="password2">Confirm Password</label><br />
 	<input type="password" name="password2" id="password2" placeholder="Enter password again"/><br /><br />
 	<input type="submit" class="button" value="Register" />
+	<br />
+	<br />
+	<div>
+		Already have an account? <a class="blue bold" href="/login?redirect_url={{redirect_url}}">Log in</a>
+	</div>
 </form>
 {% endblock %}
