simplify Sign Up

--- a/server/templates/register.html
+++ b/server/templates/register.html
@@ -20,10 +20,8 @@
 	<label for="l_name">Last Name</label><br />
 	<input type="text" name="l_name" id="l_name" placeholder="Your last name"/><br /><br />
 	<label for="password">Password</label><br />
-	<input type="password" name="password" id="password" placeholder="Enter your password"/><br /><br />
-	<label for="password2">Confirm Password</label><br />
-	<input type="password" name="password2" id="password2" placeholder="Enter password again"/><br /><br />
-	<input type="submit" class="button" value="Register" />
+	<input type="password" name="password" id="password" placeholder="Create a password"/><br /><br />
+	<input type="submit" class="button" value="Sign Up" />
 	<br />
 	<br />
 	<div>
