remember user's previous inputs

--- a/server/templates/register.html
+++ b/server/templates/register.html
@@ -14,13 +14,13 @@
         <br />
     </div>
 	<label for="email">Email Address</label><br />
-	<input type="text" name="email" id="email" placeholder="Your email address"/><br /><br />
+	<input type="text" name="email" id="email" placeholder="Your email address" {% if values.email %}value="{{values.email}}"{% endif %}/><br /><br />
 	<label for="f_name">First Name</label><br />
-	<input type="text" name="f_name" id="f_name" placeholder="Your first name"/><br /><br />
+	<input type="text" name="f_name" id="f_name" placeholder="Your first name" {% if values.f_name %}value="{{values.f_name}}"{% endif %}/><br /><br />
 	<label for="l_name">Last Name</label><br />
-	<input type="text" name="l_name" id="l_name" placeholder="Your last name"/><br /><br />
+	<input type="text" name="l_name" id="l_name" placeholder="Your last name" {% if values.l_name %}value="{{values.l_name}}"{% endif %}/><br /><br />
 	<label for="password">Password</label><br />
-	<input type="password" name="password" id="password" placeholder="Create a password"/><br /><br />
+	<input type="password" name="password" id="password" placeholder="Create a password" {% if values.password %}value="{{values.password}}"{% endif %}/><br /><br />
 	<input type="submit" class="button" value="Sign Up" />
 	<br />
 	<br />
