--- a/server/templates/login.html
+++ b/server/templates/login.html
@@ -21,9 +21,9 @@ localStorage.removeItem('user_recs')
         <br />
     </div>
 	<label for="username">Email</label><br />
-	<input type="text" name="login_email" id="login_email" placeholder="Your email address"/><br /><br />
+	<input type="text" name="login_email" id="login_email" placeholder="Your email address" {% if values.login_email %}value="{{values.login_email}}"{% endif %}/><br /><br />
 	<label for="password">Password</label><br />
-	<input type="password" name="login_password" id="login_password" placeholder="Your password"/><br /><br />
+	<input type="password" name="login_password" id="login_password" placeholder="Your password" {% if values.login_password %}value="{{values.login_password}}"{% endif %}/><br /><br />
 	<input class="button" type="submit" value="Log In"/>
 	<br />
 	<br />
