--- a/server/templates/login.html
+++ b/server/templates/login.html
@@ -28,7 +28,7 @@ localStorage.removeItem('user_recs')
 	<br />
 	<br />
 	<div>
-		New to Confer? <a class="blue bold" href="/register?redirect_url={{redirect_url}}">Sign up now</a>
+		New to Confer? <a class="blue bold" href="/register?redirect_url={{redirect_url}}{% if values.login_email %}&amp;email={{values.login_email|urlencode}}{% endif %}">Sign up now</a>
 	</div>
 </form>
 {% endblock %}
