--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -15,6 +15,9 @@ Confer Template Layout
 <title>Confer</title>
 <meta charset="utf-8">
 
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="-1">
+
 <meta name="HandheldFriendly" content="true" />
 <meta name="viewport" content="initial-scale=1.0 user-scalable=no" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
