colors are more consistent

--- a/server/templates/schedule.html
+++ b/server/templates/schedule.html
@@ -77,11 +77,15 @@ Tag sessions and papers you want to see and get updated recommendations on the f
   }
   #calendar rect.cal-star {
     fill: steelblue;
+    fill: #E9E581;
+    opacity: 0.7;
+    opacity: 1;
     stroke: none;
   }
   #calendar .cal-stars text {
     stroke: none;
     fill: white;
+    fill: black;
   }
 
 </style>
