added CSCW flag with affordances for log in and author log in

--- a/server/templates/papers.html
+++ b/server/templates/papers.html
@@ -5,14 +5,20 @@
 <a class="button active navitem nav_papers" href="/{{conf}}/papers">My Papers</a>
 <a class="button navitem nav_schedule" href="/{{conf}}/schedule">My Schedule</a>
 <a class="button navitem nav_meetups" href="/{{conf}}/meetups">My Meetups</a>
-<a class="button navitem" href="/">All Conferences</a>
+{% ifequal {{conf}} "cscw2014" %}
+<a class="button navitem" href="/login">Log In</a>
+{% else %}
+<a class="button navitem" href="/">All Conferences</a> 
+{% endifequal %}
 {% endblock %}
-
 {% block content %} 
-
 <div class="blurb">
-Tag papers you want to see and get social recommendations of other papers you may like. The recommendations update automatically as you tag new papers. Just click "Show More" to see more! 
+Tag papers you want to see and get social recommendations of other papers you may like. The recommendations update automatically as you tag new papers. Just click "Show More" to see more!
+{% ifequal {{conf}} "cscw2014" %}
+<br/><br/>Authors: <a class="button" href="/login">sign in</a> to see your papers and those you liked during authorsourcing.
+{% endifequal %}
 </div>
+
 <div class="goto-link">
 <a class="button nav_schedule" href="/{{conf}}/schedule">Go to My Schedule</a>
 </div>	
