--- a/server/templates/papers.html
+++ b/server/templates/papers.html
@@ -15,7 +15,7 @@
 <div class="blurb">
 Tag papers you want to see and get social recommendations of other papers you may like. The recommendations update automatically as you tag new papers. Just click "Show More" to see more!
 {% ifequal {{conf}} "cscw2014" %}
-<br/><br/>Authors: <a class="button" href="/login">sign in</a> to see your papers and those you liked during authorsourcing.
+<br/><br/>Authors: <a class="button" href="/login">log in</a> to see your papers and those you liked during authorsourcing.
 {% endifequal %}
 </div>
 
